# rekordbox-file-conversion

./: Cargo.toml  README.md  converter.py  explore_audio_file.py  format_for_rekordbox.py  song.py  song_test.py  test_meta.txt
src/: main.rs  song_info.rs
tests/: integration_test.rs
