[package]
name = "rekordbox-file-conversion"
version = "0.1.0"
authors = ["Kevin Lu <kevlu93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
log = {version = "0.4"}
env_logger = {version = "0.8.3"}
