[package]
name = "rekordbox-file-conversion"
version = "0.1.0"
authors = ["Kevin Lu <kevlu93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
clap = {version = "4", features = ["derive"]}


